# freqk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: linter.yml
resources/: counts_vs_simulations.Rmd  counts_vs_simulations.nb.html
src/: .nfs82c8e49c30cff00400015d87  call.rs  common.rs  count.rs  dedup.rs  hetmers.rs  index.rs  main.rs
src/hetmers/: freq_from_hetmers.rs
tests/: 1.fasta  1.fasta.fai  1.fasta.seqkit.fai  1.vcf.gz.tbi  test-reference.fa.fai  test-variants.vcf.gz.tbi  test.vcf.gz.tbi
