[package]
name = "freqk"
version = "0.12.2"
edition = "2021"

[dependencies]
bio = "2.3.0"
clap = { version = "4.3.19", features = ["env", "derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
fastq = "0.6.0"
log = "0.4.28"
rust-htslib = "0.46.0"
sha2 = "0.10"
itertools = "0.14"
statrs = "0.16.0"
average = "0.16.0"
